Implemented custom auth middleware and request validator
