# routes/api.php
@@ -3,14 +3,15 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\UserController;
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\ApiMSController;
 
 Route::get("/", function() {
     return "Hello from the api";
 });
 
 Route::middleware(["auth:api"])->group(function() {
-    Route::get("/users/", [UserController::class, "index"]);
+    Route::post("/apims/execute", [ApiMSController::class, "execute"]);
 });
 
+
 Route::post("/token/generate", [AuthController::class, "generate"]);
-Route::get("login", function() { return "Unauthorizied"; })->name("login");
